--- a/voting-client/src/style.scss
+++ b/voting-client/src/style.scss
@@ -1,3 +1,10 @@
 body {
   background-color: rgba(224,255,255, 0.5);
+  padding: 5vh;
+}
+
+@media only screen and (max-width: 700px) {
+  body {
+    padding: 0;
+  }
 }
