--- a/votymcclient/src/components/Vote.module.scss
+++ b/votymcclient/src/components/Vote.module.scss
@@ -1,21 +1,21 @@
 @import url("https://fonts.googleapis.com/css?family=Lobster+Two:400,700|Lobster+Two:100,300,400");
 
-.voting__container {
+.container {
   padding-bottom: 10px;
 
-  .voting__heading {
+  .heading {
     font-size: 1.5em;
     width: 100%;
     text-align: center;
     margin: 10px 0;
   }
 
-  .voting__btnBox {
+  .btnContainer {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
 
-    .voting__button {
+    .button {
       font-family: 'Lobster Two', sans-serif;
       font-size: 0.7em;
       border-radius: 10px;
@@ -32,7 +32,7 @@
       border: 2px solid brown;
     }
 
-    .voting__button:hover {
+    .button:hover {
       background-color: brown;
       color: white;
     }
@@ -40,8 +40,8 @@
 }
 
 @media only screen and (max-width: 700px) {
-  .voting__container {
-    .voting__btnBox {
+  .container {
+    .btnContainer {
       flex-direction: column;
       align-items: center;
     }
