--- a/votymcclient/src/components/Winner.module.scss
+++ b/votymcclient/src/components/Winner.module.scss
@@ -1,11 +1,11 @@
-.winner {
+.title {
   text-align: center;
   font-size: 2em;
   padding-top: 40px;
 }
 
 @media only screen and (max-width: 700px) {
-  .winner {
+  .title {
     text-align: center;
     font-size: 2em;
     padding: 20px 0px;
